fixed project section on small screens

--- a/style.scss
+++ b/style.scss
@@ -482,4 +482,8 @@ a {
     .vanta-canvas{
         display: none;
     }
+    #project .project-container {
+        position: relative;
+        width: 100%;
+    }
 }
